# xla

./: .gitignore  BUILD.bazel  WORKSPACE
xla/: debug_options_flags.cc  xla.proto
xla/backends/gpu/runtime/: nccl_recv_thunk.cc  nccl_send_thunk.cc  sequential_thunk.cc
xla/hlo/analysis/: while_loop_analysis.cc
xla/python/: xla_client_test.py
xla/service/: sharding_propagation.cc
xla/service/gpu/: BUILD  backend_configs.proto  custom_call_partitioners.h  custom_call_test.cc  custom_calls.cc  gpu_compiler.cc  gpu_executable.cc  gpu_latency_hiding_scheduler.cc  send_recv_partitioner.h
xla/service/gpu/runtime/: BUILD  nccl_clique_key.h  nccl_collective_thunk.cc  nccl_collective_thunk.h
xla/service/gpu/transforms/: BUILD  check_error_decomposer.cc  check_error_decomposer.h  check_error_decomposer_test.cc  collective_permute_cycle_decomposer.cc  nan_detector.cc  nan_detector.h  nan_detector_test.cc  post_layout_custom_call_rewriter.cc  send_recv_decomposer.cc  send_recv_decomposer.h  send_recv_decomposer_test.cc
xla/service/spmd/: spmd_partitioner.cc
xla/service/spmd/shardy/: BUILD  shardy_xla_pass.cc
xla/stream_executor/cuda/: BUILD  cuda_stream.cc
xla/tests/: BUILD  collective_ops_e2e_test.cc
